--- a/src/main/resources/templates/commonPage.html
+++ b/src/main/resources/templates/commonPage.html
@@ -72,7 +72,7 @@
                             </div>
                         </div>
                         <div class="container" style="border: 1px solid lightgrey;"><br>
-                            <table class="table table-striped" style="border-top: 1px solid lightgrey">
+                            <table class="table table-striped"  style="border-top: 1px solid lightgrey">
                                 <thead>
                                 <tr>
                                     <th style="border-color: lightgrey;" scope="col">Id</th>
@@ -451,5 +451,7 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
+<script type="text/javascript" src = "../js/file.js">
+</script>
 </body>
 </html>
